Add Update crudl operation, ping db coroutine
- Add user update crudl operation
- Add db.Ping as coroutine that will panic if connection will be dropped
- FIX: swagger documentation
